# solar-buddy

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: hacs.yml  hassfest.yml  tests.yml
custom_components/solar_buddy/: __init__.py  actuators.py  battery_control.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  ev_control.py  export_control.py  manifest.json  models.py  normalization.py  number.py  optimizer.py  panel.py  price_parser.py  select.py  sensor.py  strings.json  switch.py  time.py
custom_components/solar_buddy/frontend/: solar-buddy-panel.js
custom_components/solar_buddy/translations/: da.json  en.json
tests/: conftest.py  test_actuators.py  test_battery_control.py  test_battery_power.py  test_config_flow.py  test_entities.py  test_ev_control.py  test_export_control.py  test_init.py  test_normalization.py  test_optimizer.py  test_options_flow.py  test_panel.py  test_price_parser.py
