[project]
name = "solar-buddy"
version = "0.2.0"
description = "Home Assistant custom integration that optimizes local solar energy usage"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Martin Østergaard Jensen" }]
requires-python = ">=3.13"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "B",      # bugbear
    "C4",     # comprehensions
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "PL",     # pylint
    "RUF",    # ruff-specific
    "SIM",    # simplify
    "T20",    # no print
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
]
ignore = [
    "PLR0911", # optimizer decision trees legitimately have many returns
    "PLR0912", # ... and many branches
    "PLR2004", # magic values in tests and thresholds are clearer inline
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR0913"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
